--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,9 +32,6 @@ option(ENABLE_WAYLAND_DEVICE "Enable Wayland device for linux build" OFF)
 CMAKE_DEPENDENT_OPTION(BUILD_RECORDER "Build opengl recorder" ON
     "NOT SERVER_ONLY;NOT USE_GLES2;NOT APPLE" OFF)
 
-CMAKE_DEPENDENT_OPTION(TEX_COMPRESS "Build with texture compression support" ON
-    "NOT SERVER_ONLY;NOT USE_GLES2" OFF)
-
 if (UNIX AND NOT APPLE)
     option(USE_GLES2 "Use OpenGL ES2 renderer" OFF)
 endif()
@@ -178,20 +175,8 @@ if(NOT SERVER_ONLY)
     include_directories("${PROJECT_SOURCE_DIR}/lib/graphics_utils")
 endif()
 
-if (TEX_COMPRESS)
-    find_library(TC_LIBRARY NAMES squish libsquish PATHS "${PROJECT_SOURCE_DIR}/dependencies/lib")
-    find_path(TC_INCLUDEDIR NAMES squish.h PATHS "${PROJECT_SOURCE_DIR}/dependencies/include")
-    if (NOT TC_LIBRARY OR NOT TC_INCLUDEDIR)
-            message(WARNING "libsquish not found, disabling texture compression.")
-            set(TC_LIBRARY CACHE INTERNAL "")
-            set(TC_INCLUDEDIR CACHE INTERNAL "")
-            set(TEX_COMPRESS OFF)
-    else()
-        include_directories(${TC_INCLUDEDIR})
-        mark_as_advanced(TC_LIBRARY TC_INCLUDEDIR)
-        add_definitions(-DENABLE_TC)
-    endif()
-endif()
+add_subdirectory("${PROJECT_SOURCE_DIR}/lib/libsquish")
+include_directories("${PROJECT_SOURCE_DIR}/lib/libsquish")
 
 # Build the irrlicht library
 add_subdirectory("${PROJECT_SOURCE_DIR}/lib/irrlicht")
@@ -444,8 +429,8 @@ if(NOT SERVER_ONLY)
     endif()
 endif()
 
-if(TEX_COMPRESS)
-    target_link_libraries(supertuxkart ${TC_LIBRARY})
+if(NOT SERVER_ONLY AND NOT USE_GLES2)
+    target_link_libraries(supertuxkart squish)
 endif()
 
 if(UNIX AND NOT APPLE)
